# VCMP-CMake

./: CMakeLists.txt  README.md
server/: CMakeLists.txt  mpsvrrel32  slinux32  slinux64
src/: main.cpp
